--- a/home.css
+++ b/home.css
@@ -1,2 +1,33 @@
 /* CSS Document */
+@font-face {
+    font-family: 'RixYeoljeongdo_Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2102-01@1.0/RixYeoljeongdo_Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
+body {
+	display: flex;
+	justify-content: center;
+	margin: 40px;
+	height: 50px;
+}
+#xsize {
+	margin: 4px;
+	background-color: ghostwhite;
+	width: 20%;
+	font-size : 100%;
+}
+#ysize {
+	margin: 4px;
+	background-color: ghostwhite;
+	width: 20%;
+	font-size: 100%;
+}
+#play {
+/*	desplay: inline;*/
+	margin: 4px;
+	background-color: ghostwhite;
+	width: 6%;
+	font-size: 100%;
+}
