--- a/home.css
+++ b/home.css
@@ -5,29 +5,40 @@
     font-weight: normal;
     font-style: normal;
 }
-
-body {
+h1 {
 	display: flex;
 	justify-content: center;
-	margin: 40px;
-	height: 50px;
+	font-family: RixYeoljeongdo_Regular;
 }
+#title {
+	display: inline;
+}
+#box {
+	display: flex;
+	justify-content: center;
+}
+#xy {
+	display: block;
+/*	justify-content: center;*/
+	align-content: center;
+}
+
 #xsize {
-	margin: 4px;
-	background-color: ghostwhite;
-	width: 20%;
-	font-size : 100%;
+	background-color: white;
+	width: 48%;
+	height: 30px;
+	font-size: 100%;
 }
 #ysize {
-	margin: 4px;
-	background-color: ghostwhite;
-	width: 20%;
+	background-color: white;
+	width: 48%;
+	height: 30px;
 	font-size: 100%;
 }
 #play {
 /*	desplay: inline;*/
-	margin: 4px;
-	background-color: ghostwhite;
-	width: 6%;
+	background-color: white;
+	height: 37px;
 	font-size: 100%;
+	
 }
