--- a/home.css
+++ b/home.css
@@ -8,37 +8,32 @@
 h1 {
 	display: flex;
 	justify-content: center;
+	font-size: 80px;
 	font-family: RixYeoljeongdo_Regular;
 }
-#title {
-	display: inline;
-}
 #box {
+	
+}
+#xy {
 	display: flex;
 	justify-content: center;
 }
-#xy {
-	display: block;
-/*	justify-content: center;*/
-	align-content: center;
-}
-
-#xsize {
+#xsize, #ysize {
 	background-color: white;
-	width: 45%;
-	height: 30px;
-	font-size: 100%;
+	width: 30%;
+	height: 45px;
+	margin: 10px;
+	font-size: 120%;
+	text-align: center;
 }
-#ysize {
-	background-color: white;
-	width: 45%;
-	height: 30px;
-	font-size: 100%;
+#playButton{
+	display: flex;
+	justify-content: center;
 }
 #play {
-/*	desplay: inline;*/
 	background-color: white;
-	height: 37px;
+	margin: 10px;
+	height: 45px;
+	width: 30%;
 	font-size: 100%;
-	
 }
