--- a/game.css
+++ b/game.css
@@ -1,4 +1,12 @@
-/* CSS Document */
+/**
+ * IDEV Project 'WEBStudy' - Minesweeper
+ * Copyright (c) 2021 김민우, 김예린, 이종현
+ * All Rights Reserved
+ *
+ * game.css
+ * stylesheet for game.html
+ */
+
 body {
 	margin: 30px;
 }
