--- a/game.css
+++ b/game.css
@@ -9,7 +9,6 @@ body {
 }
 #control {
 	display: flex;
-	justify-content: center;
 	margin: 10px;
 }
 .button_general {
@@ -17,6 +16,8 @@ body {
 	margin: 10px;
 	width: 10%;
 	background-color: aliceblue;
+}
+#time {
 }
 .unknown_mine {
 	border-radius: 1%;
