--- a/game.css
+++ b/game.css
@@ -1,118 +1,140 @@
 /* CSS Document */
 body {
-	margin: 30px;
+    margin: 30px;
 }
 #mstable {
-	display: flex;
-	justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-#control {
-	display: flex;
-	margin: 10px;
+.layer {
+    width: 500px;
+    height: 250px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 5px;
+    box-shadow: 0 0 10px -4px;
+}
+.control {
+    display: flex;
+    margin: 10px;
 }
 .button_general {
-	border-radius: 1%;
-	margin: 10px;
-	width: 10%;
-	background-color: aliceblue;
+    border-radius: 1%;
+    margin: 10px;
+    width: 10%;
+    background-color: aliceblue;
 }
-#time {
-}
+#time {}
 .unknown_mine {
-	border-radius: 1%;
-	width: 30px;
-	height: 30px;
+    border-radius: 1%;
+    width: 30px;
+    height: 30px;
     background-color: powderblue;
 }
 .not_mine {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
 }
 .not_mine_1 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: blue;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .not_mine_2 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: green;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .not_mine_3 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: red;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .not_mine_4 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: black;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .not_mine_5 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: brown;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .not_mine_6 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: green;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .not_mine_7 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: black;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .not_mine_8 {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: aliceblue;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
     color: black;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
 .exploded_mine {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: palevioletred;
-	width: 30px;
-	height: 30px;
+    width: 30px;
+    height: 30px;
 }
 .flagged_mine {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: powderblue;
-	width: 30px;
-	height: 30px;
-	background-image: url("img/flag.png");
-	background-size: cover;
+    width: 30px;
+    height: 30px;
+    background-image: url("img/flag.png");
+    background-size: cover;
+}
+.dimmed {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
 }
