난이도 버튼 가운데 정렬

--- a/home.css
+++ b/home.css
@@ -40,8 +40,15 @@ h1 {
 }
 #play {
 	background-color: white;
-	margin: 10px;
 	height: 45px;
 	width: 30%;
+	font-size: 100%;
+	margin-top: 40px;
+}
+#difficulty {
+	position: absolute;
+	background-color: white;
+	height: 30px;
+	width: 10%;
 	font-size: 100%;
 }
