--- a/game.css
+++ b/game.css
@@ -21,16 +21,29 @@ body {
     box-shadow: 0 0 10px -4px;
 }
 .control {
-    display: flex;
-    margin: 10px;
+    display: block;
+	margin: auto;
+	width: 10%;
+	text-align: center;
+	font-family: 'Nanum Gothic', sans-serif;
+}
+.controlbtn {
+	display: flex;
+	justify-content: center;
+	width: 100%;
 }
 .button_general {
-    border-radius: 1%;
-    margin: 10px;
-    width: 10%;
-    background-color: aliceblue;
+	border-radius: 1%;
+    background-color: white;
+	margin: 10px;
+	font-size: 18px;
+	font-family: 'Nanum Gothic', sans-serif;
 }
-#time {}
+#dif, #scoreboard, #time, #restxt {
+	font-size: 18px;
+	margin: 10px;
+	font-family: 'Nanum Gothic', sans-serif;
+}
 .unknown_mine {
     border-radius: 1%;
     width: 30px;
