--- a/game.css
+++ b/game.css
@@ -27,6 +27,7 @@ body {
     margin: auto;
     border-radius: 5px;
     box-shadow: 0 0 10px -4px;
+    opacity: 0.5;
 }
 .control {
     display: block;
