--- a/game.css
+++ b/game.css
@@ -158,5 +158,16 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: -1;
+    z-index: 1;
+}
+
+#result {
+	display: block;
+	margin: 0 auto;
+}
+#resulttxt {
+	
+}
+#restart {
+	
 }
