--- a/game.css
+++ b/game.css
@@ -15,9 +15,9 @@ body {
     justify-content: center;
 }
 .layer {
-    width: 500px;
-    height: 250px;
-    background-color: #fff;
+	width: 100%;
+	height: 100%;
+    background-color: rgba(0,0,0,0.3);
     border: 1px solid #e5e5e5;
     position: absolute;
     top: 0;
@@ -26,13 +26,13 @@ body {
     right: 0;
     margin: auto;
     border-radius: 5px;
-    box-shadow: 0 0 10px -4px;
-    opacity: 0.5;
+	
+	z-index: 0;
 }
 .control {
     display: block;
 	margin: auto;
-	width: 10%;
+	width: 40%;
 	text-align: center;
 	font-family: 'Nanum Gothic', sans-serif;
 }
@@ -45,12 +45,14 @@ body {
 	border-radius: 1%;
     background-color: white;
 	margin: 10px;
-	font-size: 18px;
+	font-size: 20px;
 	font-family: 'Nanum Gothic', sans-serif;
 }
-#dif, #scoreboard, #time, #restxt {
-	font-size: 18px;
-	margin: 10px;
+#dif, #scoreboard, #time{
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	font-size: 20px;
 	font-family: 'Nanum Gothic', sans-serif;
 }
 .unknown_mine {
@@ -152,21 +154,39 @@ body {
     background-size: cover;
 }
 .dimmed {
-    background-color: rgba(0, 0, 0, 0.3);
+	width: 500px;
+    height: 250px;
+    background-color: rgba(255,255,255,0.7);
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     z-index: 1;
+	margin: auto;
+	margin-top: 230px;
 }
 
 #result {
+	display: inline;
+	width: 200px;
+	width: 200px;
+	position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+	text-align: center;
+	margin-top: 260px;
 	
+	z-index: 2;
 }
-#resulttxt {
-	
+#restxt {
+	font-size: 30px;
+	margin: 10px;
+	font-family: 'Nanum Gothic', sans-serif;
 }
 #restart {
-	
+	margin-top: 40px;
 }
