--- a/game.css
+++ b/game.css
@@ -16,7 +16,7 @@ body {
 }
 .layer {
 	width: 100%;
-	height: 100%;
+	height: 160%;
     background-color: rgba(0,0,0,0.3);
     border: 1px solid #e5e5e5;
     position: absolute;
@@ -164,13 +164,12 @@ body {
     bottom: 0;
     z-index: 1;
 	margin: auto;
-	margin-top: 230px;
+	margin-top: 400px;
 }
 
 #result {
 	display: inline;
-	width: 200px;
-	width: 200px;
+	width: 300px;
 	position: absolute;
     top: 0;
     left: 0;
@@ -178,7 +177,7 @@ body {
     right: 0;
     margin: auto;
 	text-align: center;
-	margin-top: 260px;
+	margin-top: 450px;
 	
 	z-index: 2;
 }
@@ -186,6 +185,7 @@ body {
 	font-size: 30px;
 	margin: 10px;
 	font-family: 'Nanum Gothic', sans-serif;
+	text-align: center;
 }
 #restart {
 	margin-top: 40px;
