--- a/game.css
+++ b/game.css
@@ -10,14 +10,16 @@
 body {
     margin: 30px;
 }
+
 #mstable {
     display: flex;
     justify-content: center;
 }
+
 .layer {
-	width: 100%;
-	height: 160%;
-    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    height: 160%;
+    background-color: rgba(0, 0, 0, 0.3);
     border: 1px solid #e5e5e5;
     position: absolute;
     top: 0;
@@ -26,47 +28,56 @@ body {
     right: 0;
     margin: auto;
     border-radius: 5px;
-	
-	z-index: 0;
+
+    z-index: 0;
 }
+
 .control {
     display: block;
-	margin: auto;
-	width: 40%;
-	text-align: center;
-	font-family: 'Nanum Gothic', sans-serif;
+    margin: auto;
+    width: 40%;
+    text-align: center;
+    font-family: 'Nanum Gothic', sans-serif;
 }
+
 .controlbtn {
-	display: flex;
-	justify-content: center;
-	width: 100%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
+
 .button_general {
-	border-radius: 1%;
+    border-radius: 1%;
     background-color: white;
-	margin: 10px;
-	font-size: 20px;
-	font-family: 'Nanum Gothic', sans-serif;
+    margin: 10px;
+    font-size: 20px;
+    font-family: 'Nanum Gothic', sans-serif;
 }
-#dif, #scoreboard, #time{
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	font-size: 20px;
-	font-family: 'Nanum Gothic', sans-serif;
+
+#dif,
+#scoreboard,
+#time {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 20px;
+    font-family: 'Nanum Gothic', sans-serif;
 }
+
 .unknown_mine {
     border-radius: 1%;
     width: 30px;
     height: 30px;
     background-color: powderblue;
 }
+
 .not_mine {
     border-radius: 1%;
     background-color: aliceblue;
     width: 30px;
     height: 30px;
 }
+
 .not_mine_1 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -76,6 +87,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .not_mine_2 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -85,6 +97,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .not_mine_3 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -94,6 +107,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .not_mine_4 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -103,6 +117,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .not_mine_5 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -112,6 +127,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .not_mine_6 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -121,6 +137,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .not_mine_7 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -130,6 +147,7 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .not_mine_8 {
     border-radius: 1%;
     background-color: aliceblue;
@@ -139,12 +157,14 @@ body {
     font-family: 'Nanum Gothic', sans-serif;
     font-size: larger;
 }
+
 .exploded_mine {
     border-radius: 1%;
     background-color: palevioletred;
     width: 30px;
     height: 30px;
 }
+
 .flagged_mine {
     border-radius: 1%;
     background-color: powderblue;
@@ -153,40 +173,43 @@ body {
     background-image: url("img/flag.png");
     background-size: cover;
 }
+
 .dimmed {
-	width: 500px;
+    width: 500px;
     height: 250px;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     z-index: 1;
-	margin: auto;
-	margin-top: 400px;
+    margin: auto;
+    margin-top: 400px;
 }
 
 #result {
-	display: inline;
-	width: 300px;
-	position: absolute;
+    display: inline;
+    width: 300px;
+    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     margin: auto;
-	text-align: center;
-	margin-top: 450px;
-	
-	z-index: 2;
+    text-align: center;
+    margin-top: 450px;
+
+    z-index: 2;
 }
+
 #restxt {
-	font-size: 30px;
-	margin: 10px;
-	font-family: 'Nanum Gothic', sans-serif;
-	text-align: center;
+    font-size: 30px;
+    margin: 10px;
+    font-family: 'Nanum Gothic', sans-serif;
+    text-align: center;
 }
+
 #restart {
-	margin-top: 40px;
+    margin-top: 40px;
 }
