--- a/home.css
+++ b/home.css
@@ -8,25 +8,28 @@
  */
 
 @font-face {
-    font-family: 'RixYeoljeongdo_Regular';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2102-01@1.0/RixYeoljeongdo_Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'RixYeoljeongdo_Regular';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2102-01@1.0/RixYeoljeongdo_Regular.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
 }
+
 h1 {
 	display: flex;
 	justify-content: center;
 	font-size: 80px;
 	font-family: RixYeoljeongdo_Regular;
 }
-#box {
-	
-}
+
+#box {}
+
 #xy {
 	display: flex;
 	justify-content: center;
 }
-#xsize, #ysize {
+
+#xsize,
+#ysize {
 	background-color: white;
 	width: 30%;
 	height: 45px;
@@ -34,12 +37,15 @@ h1 {
 	font-size: 120%;
 	text-align: center;
 }
-#second_floor, #third_floor{
+
+#second_floor,
+#third_floor {
 	width: 80%;
 	margin: 0 auto;
 	text-align: center;
 	margin-top: 20px;
 }
+
 #play {
 	display: inline-block;
 	background-color: white;
@@ -47,12 +53,14 @@ h1 {
 	width: 30%;
 	font-size: 100%;
 }
+
 #difficulty {
 	background-color: white;
 	height: 30px;
 	width: 10%;
 	font-size: 100%;
 }
+
 #level {
 	display: inline-block;
 }
