--- a/home.css
+++ b/home.css
@@ -18,10 +18,8 @@ h1 {
 	display: flex;
 	justify-content: center;
 	font-size: 80px;
-	font-family: RixYeoljeongdo_Regular;
+	font-family: 'RixYeoljeongdo_Regular';
 }
-
-#box {}
 
 #xy {
 	display: flex;
