--- a/home.css
+++ b/home.css
@@ -14,6 +14,11 @@
 	font-style: normal;
 }
 
+html {
+	background-color: #DCE2F0;
+	color: #50586C;
+}
+
 h1 {
 	display: flex;
 	justify-content: center;
@@ -26,9 +31,55 @@ h1 {
 	justify-content: center;
 }
 
+input[type="checkbox"] {
+	-webkit-appearance: none;
+	appearance: none;
+	position: relative;
+	width: 16px;
+	height: 16px;
+	margin: 7px;
+	cursor: pointer;
+	outline: none !important;
+	border: 1px solid #50586C;
+	border-radius: 2px;
+	background: #DCE2F0;
+	transform: translate(2px, 50%);
+}
+
+input[type="checkbox"]::before {
+	content: "\2713";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	overflow: hidden;
+	transform: scale(0) translate(-50%, -50%);
+	line-height: 1;
+}
+
+input[type="checkbox"]:hover {
+	border-color: #000000;
+}
+
+input[type="checkbox"]:checked {
+	background-color: #50586C;
+	border-color: rgba(255, 255, 255, 0.3);
+	color: white;
+}
+
+input[type="checkbox"]:checked::before {
+	border-radius: 2px;
+	transform: scale(1) translate(-50%, -50%);
+}
+
+#second_floor {
+	height: 30px;
+	line-height: 30px;
+}
+
 #xsize,
 #ysize {
-	background-color: white;
+	background-color: #DCE2F0;
+	color: #50586C;
 	width: 30%;
 	height: 45px;
 	margin: 10px;
@@ -46,14 +97,16 @@ h1 {
 
 #play {
 	display: inline-block;
-	background-color: white;
+	background-color: #DCE2F0;
+	color: #50586C;
 	height: 45px;
 	width: 30%;
 	font-size: 100%;
 }
 
 #difficulty {
-	background-color: white;
+	background-color: #DCE2F0;
+	color: #50586C;
 	height: 30px;
 	width: 10%;
 	font-size: 100%;
