--- a/game.css
+++ b/game.css
@@ -8,212 +8,212 @@
  */
 
 body {
-	background-color: #DCE2F0;
-	color: #50586C;
-    margin: 30px;
+  background-color: #dce2f0;
+  color: #50586c;
+  margin: 30px;
 }
 
 #mstable {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .layer {
-    width: 100%;
-    height: 160%;
-    background-color: rgba(0, 0, 0, 0.3);
-    border: 1px solid #e5e5e5;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    border-radius: 5px;
+  width: 100%;
+  height: 160%;
+  background-color: rgba(0, 0, 0, 0.3);
+  border: 1px solid #e5e5e5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  border-radius: 5px;
 
-    z-index: 0;
+  z-index: 0;
 }
 
 .control {
-    display: block;
-    margin: auto;
-    width: 40%;
-    text-align: center;
-    font-family: 'Nanum Gothic', sans-serif;
+  display: block;
+  margin: auto;
+  width: 40%;
+  text-align: center;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
 .controlbtn {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .button_general {
-    border-radius: 1%;
-    background-color: #DCE2F0;
-    margin: 10px;
-    font-size: 20px;
-    font-family: 'Nanum Gothic', sans-serif;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  margin: 10px;
+  font-size: 20px;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
 #dif,
 #scoreboard,
 #time {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    font-size: 20px;
-    font-family: 'Nanum Gothic', sans-serif;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-size: 20px;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
 .unknown_mine {
-    border-radius: 1%;
-    width: 30px;
-    height: 30px;
-    background-color: #50586C;
+  border-radius: 1%;
+  width: 30px;
+  height: 30px;
+  background-color: #50586c;
 }
 
 .not_mine {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
 }
 
 .not_mine_1 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: blue;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: blue;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .not_mine_2 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: green;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: green;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .not_mine_3 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: red;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: red;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .not_mine_4 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: black;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: black;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .not_mine_5 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: brown;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: brown;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .not_mine_6 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: green;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: green;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .not_mine_7 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: black;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: black;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .not_mine_8 {
-    border-radius: 1%;
-    background-color:#DCE2F0;
-    width: 30px;
-    height: 30px;
-    color: black;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: larger;
+  border-radius: 1%;
+  background-color: #dce2f0;
+  width: 30px;
+  height: 30px;
+  color: black;
+  font-family: "Nanum Gothic", sans-serif;
+  font-size: larger;
 }
 
 .exploded_mine {
-    border-radius: 1%;
-    background-color: palevioletred;
-    width: 30px;
-    height: 30px;
-    background-image: url("img/mine.png");
-    background-size: cover;
+  border-radius: 1%;
+  background-color: palevioletred;
+  width: 30px;
+  height: 30px;
+  background-image: url("img/mine.png");
+  background-size: cover;
 }
 
 .flagged_mine {
-    border-radius: 1%;
-    background-color: #50586C;
-    width: 30px;
-    height: 30px;
-    background-image: url("img/flag.png");
-    background-size: cover;
+  border-radius: 1%;
+  background-color: #50586c;
+  width: 30px;
+  height: 30px;
+  background-image: url("img/flag.png");
+  background-size: cover;
 }
 
 .dimmed {
-    width: 500px;
-    height: 250px;
-    background-color: rgba(255, 255, 255, 0.7);
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 1;
-    margin: auto;
-    margin-top: 400px;
+  width: 500px;
+  height: 250px;
+  background-color: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  margin: auto;
+  margin-top: 400px;
 }
 
 #result {
-    display: inline;
-    width: 300px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-    text-align: center;
-    margin-top: 450px;
+  display: inline;
+  width: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+  margin-top: 450px;
 
-    z-index: 2;
+  z-index: 2;
 }
 
 #restxt {
-    font-size: 30px;
-    margin: 10px;
-    font-family: 'Nanum Gothic', sans-serif;
-    text-align: center;
+  font-size: 30px;
+  margin: 10px;
+  font-family: "Nanum Gothic", sans-serif;
+  text-align: center;
 }
 
 #restart {
-    margin-top: 40px;
+  margin-top: 40px;
 }
