--- a/game.css
+++ b/game.css
@@ -8,8 +8,8 @@
  */
 
 body {
-	background-color: #DCE2F0;
-	color: #50586C;
+    background-color: #dce2f0;
+    color: #50586c;
     margin: 30px;
 }
 
@@ -50,7 +50,7 @@ body {
 
 .button_general {
     border-radius: 1%;
-    background-color: #DCE2F0;
+    background-color: #dce2f0;
     margin: 10px;
     font-size: 20px;
     font-family: 'Nanum Gothic', sans-serif;
@@ -70,19 +70,19 @@ body {
     border-radius: 1%;
     width: 30px;
     height: 30px;
-    background-color: #50586C;
+    background-color: #50586c;
 }
 
 .not_mine {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
 }
 
 .not_mine_1 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: blue;
@@ -92,7 +92,7 @@ body {
 
 .not_mine_2 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: green;
@@ -102,7 +102,7 @@ body {
 
 .not_mine_3 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: red;
@@ -112,7 +112,7 @@ body {
 
 .not_mine_4 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: black;
@@ -122,7 +122,7 @@ body {
 
 .not_mine_5 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: brown;
@@ -132,7 +132,7 @@ body {
 
 .not_mine_6 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: green;
@@ -142,7 +142,7 @@ body {
 
 .not_mine_7 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: black;
@@ -152,7 +152,7 @@ body {
 
 .not_mine_8 {
     border-radius: 1%;
-    background-color:#DCE2F0;
+    background-color: #dce2f0;
     width: 30px;
     height: 30px;
     color: black;
@@ -165,16 +165,16 @@ body {
     background-color: palevioletred;
     width: 30px;
     height: 30px;
-    background-image: url("img/mine.png");
+    background-image: url('img/mine.png');
     background-size: cover;
 }
 
 .flagged_mine {
     border-radius: 1%;
-    background-color: #50586C;
+    background-color: #50586c;
     width: 30px;
     height: 30px;
-    background-image: url("img/flag.png");
+    background-image: url('img/flag.png');
     background-size: cover;
 }
 
